# Tunnel_ID_Demo

./: LICENSE  README.md  database.csv  environment.yml  main.py  pyproject.toml  requirements.txt  response.json
Frontend/: index.html  package-lock.json  package.json  vite.config.js
Frontend/src/: App.jsx  main.jsx
artifacts/: report_dev.md  thresholds_dev.json
artifacts/pad/: pad_report_dev.md  pad_thresholds_dev.json
configs/: default.yaml  dev_all_relaxed.yaml  dev_liveness_relaxed.yaml  dev_quickstart.yaml
data/templates/: alice.meta.json  alice.npy  alice.npz  bob.meta.json  bob.npy  bob.npz
linear_sketch/: .env  applic.py
linear_sketch/data/: users_data.csv
migrations/: 001_create_users_table.sql
preprocessing/: face.py  face_landmark.py  main.py  preprocess_fingerprints.py  shashi1.json  shashi2.json  vec1.json  vec2.json
scripts/: calibrate_thresholds.py  evaluate_sessions.py
tests/: test_dataset_eval_runner.py  test_liveness_fusion_policy.py  test_metrics_calibration.py  test_pad_eval.py
tunnelid_bio/: __init__.py  cli.py  config.py  types.py  versioning.py
tunnelid_bio/aggregation/: aggregator.py
tunnelid_bio/calibration/: __init__.py  thresholds.py
tunnelid_bio/capture/: face_analyzer.py  pose.py  protocol.py  quality.py
tunnelid_bio/dataset/: __init__.py  local.py
tunnelid_bio/embedding/: alignment.py  encoder.py
tunnelid_bio/evaluation/: __init__.py  harness.py  metrics.py  pad_eval.py  runner.py
tunnelid_bio/liveness/: active.py  fusion.py  passive.py  temporal.py
tunnelid_bio/metrics/: __init__.py  drift.py  (+2 more)
(+59 files in other folders)
